tests/paczka1/fuzzy1/85721914.err
Error in line 7: 4AM S522 80,4
Error in line 24: N7g8D32ed3 S397 58,9
Error in line 22: LnZCJ S264 28,1
Error in line 28: Y0V A249 53,8
Error in line 31: LnZCJ A249 64,7
Error in line 34: N7g8D32ed3 A249 25,0
Error in line 29: Y0V S264 99,8
